--- a/style.css
+++ b/style.css
@@ -122,13 +122,17 @@ header nav ul li a:hover{
     background-size: cover;
 }
 .principal h1{
+    font-family: 'Montserrat', sans-serif, black;
+    font-weight: 900;
+    font-size: 7rem;
     margin-left: 160px;
     margin-top: 100px;
 }
-.principal h5{
+.principal p{
     margin-top: 8px;
     margin-bottom: 300px;
     margin-left: 160px;
+    color: white;
 }
 ul{
     list-style-type: disc;
@@ -160,6 +164,9 @@ ul{
     margin-top: 80px;
     color: #F36200;
     text-align: right;
+    font-size: 4rem;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900;
 }
 
 /*Recientes*/
@@ -465,4 +472,25 @@ footer li{
 }
 .blogcol{
     margin-top: 50px;
+}
+/*inmobiliaria*/
+.inmobiliaria{
+    width: 100%;
+    height: 700px;
+    background-image: url(./medios/inmobiliaria.jpg);
+    background-color: rgba(0,0,0,0.5);
+    background-blend-mode: multiply;
+    color: white;
+    display: flex;
+    align-items: left;
+    justify-content: center;
+    flex-direction: column;
+    background-size: cover;
+}
+.inmobiliaria h1{
+    font-family: 'Montserrat', sans-serif, black;
+    font-weight: 900;
+    font-size: 7rem;
+    margin-left: 160px;
+    margin-top: 100px;
 }
