--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ header{
     float: left;
     padding: 8px;
 }
+/*
 header nav{
     color: white;
     display: block;
@@ -106,6 +107,28 @@ header nav ul li a:hover{
 .login:hover{
     background-color: #256AA1;
     color: white;
+}
+*/
+#barranav a{
+    text-decoration: none;
+    color: #256AA1;
+    font-size: 1.5rem;
+    font-weight: bold;
+    font-family: 'Montserrat', sans-serif;
+}
+#navegador{
+    width: 100%;
+    color: white;
+    margin: 0;
+} 
+#barranav{
+    display: flex;
+    justify-content: space-around;
+}
+.barranav{
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 50px;
 }
 /*Banner principal*/
 .principal{
@@ -527,7 +550,7 @@ footer li{
     font-weight: 400;
 }
 .espacio{
-    color: #256AA1;
+    color: #F36200;
     font-size: 1.5rem;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
@@ -541,4 +564,54 @@ footer li{
     font-size: 4rem;
     font-family: 'Montserrat', sans-serif;
     font-weight: 900;
+}
+/*Resultados*/
+.principalresult{
+    width: 100%;
+    height: 300px;
+    background-image: url(./medios/bannerresultados.png);
+    background-color: rgba(0,0,0,0.5);
+    background-blend-mode: multiply;
+    color: white;
+    display: flex;
+    align-items: left;
+    justify-content: center;
+    flex-direction: column;
+    background-size: cover;
+}
+.principalresult h1{
+    font-family: 'Montserrat', sans-serif, black;
+    font-weight: 900;
+    font-size: 7rem;
+    margin-left: 160px;
+    margin-top: 100px;
+}
+.titleapto h2 {
+    margin-left: 165px;
+    margin-bottom: 10px; /* Ajuste del margen inferior */
+    margin-top: 60px; /* Ajuste del margen superior */
+    color: #256AA1;
+    text-align: left;
+    font-size: 3rem;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+}
+.titleapto p {
+    margin-left: 165px;
+    margin-right: 30px;
+    margin-bottom: 10px; /* Ajuste del margen inferior */
+    margin-top: 10px; /* Ajuste del margen superior */
+    color: #818080;
+    text-align: left;
+    font-size: 2rem;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+}
+.icons{
+    width: 3%;
+}
+.name{
+    display: flex;
+    width: 100%;
+    justify-content: flex-start;
 }
