--- a/style.css
+++ b/style.css
@@ -586,6 +586,9 @@ footer li{
     margin-left: 160px;
     margin-top: 100px;
 }
+.titleapto{
+    margin-bottom: 40px;
+}
 .titleapto h2 {
     margin-left: 165px;
     margin-bottom: 10px; /* Ajuste del margen inferior */
