--- a/SASS/scss/styles.scss
+++ b/SASS/scss/styles.scss
@@ -46,6 +46,7 @@ p{
 @import "./partials/blog";
 @import "./partials/inmobiliaria";
 @import "./partials/resultados";
+@import "./partials/mediaquerys";
 
 
 
